# obs-polyemesis

./: .actrc  .clang-tidy  .gitattributes  .gitignore  .gitleaks.toml  .lcovrc  .markdownlint.json  .secrets.example  .secrets.template  .yamllint  ACT_TESTING.md  ACT_TEST_RESULTS.md  APPLE_CODE_SIGNING_SETUP.md  BUILDING.md  BUILD_MATRIX.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COMPLETION_SUMMARY.md  COMPLIANCE_REVIEW.md  COMPREHENSIVE_TEST_PLAN.md  CONTRIBUTING.md  CROSS_PLATFORM_STATUS.md  Dockerfile.arm64-test  Dockerfile.coverage  Dockerfile.integration-test  Dockerfile.test  Dockerfile.test-runner  IMPROVEMENTS.md  LOCAL_TESTING_SETUP.md  Makefile  NEXT_STEPS.md  PLATFORM_FIXES.md  QUICK_START.md  README.md  RELEASE_NOTES_1.0.0.md  RELEASE_READY_SUMMARY.md  REMAINING_WORK.md  SECURITY_SCAN_NOTES.md  SONARCLOUD_FIXES.md  (+20 more)
.build-universal/: create-package.cmake  distribution  plugin-support.c
.build-universal/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
.build-universal/CMakeScripts/: ReRunCMake.make
.github/: FUNDING.yml  pull_request_template.md
.github/scripts/: build-ubuntu  package-ubuntu
.github/workflows/: automated-tests.yml  build-project.yaml  check-format.yaml  ci.yaml  coverage.yml  create-packages.yaml  e2e-tests.yaml  e2e-tests.yml  integration-tests.yml  lint.yaml  pr-pull.yaml  push.yaml  quality-analysis.yaml  release.yaml  run-tests.yaml  snyk.yaml  (+3 more)
cmake/: BuildJanssonUniversal.cmake  SanitizerConfig.cmake
docs/: BUILDING.md  CICD_WORKFLOW.md  DEPLOYMENT_GUIDE.md  OBS_32.0.2_COMPATIBILITY_UPDATES.md  USER_GUIDE.md
restreamer-installer/: .gitignore  QUICKSTART.md  README.md  SETUP.md  diagnose.sh  install.sh  test-local.sh  uninstall.sh
scripts/: RESTREAMER_INSTALLER.md  build-all-platforms.sh  full-local-test.sh  generate-coverage.sh  install-restreamer.sh  local-pre-push.sh  macos-build.sh  macos-package.sh  macos-test.sh  pre-commit  run-all-act-tests.sh  run-comprehensive-tests.sh  run-coverage-docker.sh  run-integration-docker-compose.sh  run-integration-tests.sh  run-unit-tests-docker.sh  run_coverage.sh  run_tests.sh  sync-and-build-windows.sh  test-all-platforms.sh  test-linux-docker.sh  test-polyemesis.sh  test-windows.ps1  uninstall-restreamer.sh  verify_code.sh  windows-act.sh  windows-package.sh  windows-test.sh  windows-validate-act.ps1
src/: channel-edit-dialog.cpp  channel-edit-dialog.h  channel-widget.cpp  channel-widget.h  collapsible-section.cpp  collapsible-section.h  connection-config-dialog.cpp  connection-config-dialog.h  destination-widget.cpp  destination-widget.h  obs-bridge.c  obs-bridge.h  obs-helpers.hpp  obs-service-loader.cpp  obs-service-loader.h  obs-theme-utils.cpp  obs-theme-utils.h  output-widget.cpp  output-widget.h  plugin-main.c  plugin-main.cpp  plugin-main.h  plugin-support.h  profile-edit-dialog.cpp  profile-edit-dialog.h  profile-widget.cpp  profile-widget.h  property-widgets.hpp  restreamer-api-client.cpp  restreamer-api-client.hpp  restreamer-api-utils.c  restreamer-api-utils.h  restreamer-api.c  restreamer-api.h  restreamer-channel.c  restreamer-channel.h  restreamer-config.c  restreamer-config.h  restreamer-dock-bridge.cpp  restreamer-dock.cpp  (+19 more)
tests/: AUTOMATION_SUMMARY.md  CMakeLists.txt  README.md  README_INTEGRATION_TESTS.md  README_PLUGIN_TESTS.md  README_WINDOWS_TESTING.md  RESULTS.md  __init__.py  api_error_handling_test.sh  api_integration_test.sh  e2e_workflow_test.sh  mock_restreamer.c  mock_restreamer.h  obs_stubs.c  requirements.txt  run-docker-test.sh  run-integration-tests-with-secrets.sh  run-integration-tests.ps1  run-integration-tests.sh  run-live-integration-tests.sh  run-restreamer-jwt-tests.sh  test-plugin-automated.sh  test-plugin-restreamer-integration.sh  test-restreamer-integration.py  test-user-journey.sh  test_api_auth.c  test_api_client.c  test_api_coverage_gaps.c  test_api_coverage_improvements.c  test_api_diagnostics.c  test_api_dynamic_output.c  test_api_edge_cases.c  test_api_endpoints.c  test_api_error_handling.c  test_api_filesystem.c  test_api_helpers.c  test_api_parse_helpers.c  test_api_parsing.c  test_api_process_config.c  test_api_process_management.c  (+35 more)
tests/automated/: .env.example  README.md  check_kick_logs.py  requirements.txt  run_tests.sh  test_all_platforms.py  test_horizontal_only.py  test_kick_only.py  test_live_streaming.py  test_orientation.py  test_performance.py  test_platform_verification.py  test_polyemesis.py  test_security.py
tests/e2e/: README.md  README_STREAMING_E2E.md  STREAMING_E2E_TESTS.md  STREAMING_WORKFLOW_TESTS.md  run-all-e2e-tests.sh  run-streaming-e2e-tests.sh  run-streaming-workflow-tests.sh  test_streaming_e2e.c  test_streaming_workflow.c
tests/e2e/common/: test-framework.sh
tests/e2e/linux/: e2e-test-linux.sh
tests/e2e/macos/: e2e-test-macos.sh
tests/e2e/windows/: e2e-test-windows.ps1
tests/fixtures/: generate_test_media.sh  restreamer_config.json
tests/integration/: CHANNEL_API_TESTS.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  TESTING_GUIDE.md  nginx-rtmp.conf  test_api_errors.py  test_api_integration.py  test_channel_api_integration.c  test_e2e_plugin.py  test_e2e_workflows.py  test_obs_integration.py  test_restreamer_api_integration.c
tests/setup/: __init__.py  start_restreamer.py
tests/ui/: README.md  TESTING.md  test_ui_workflows.c
tests/unit/: CMakeLists.txt  README.md  README_API_EXTENDED.md  TESTING_SUMMARY.md  run_api_extended_tests.sh  test_api_extended.c  test_channel_extended.c  test_collapsible_section.cpp  test_destination_management.cpp  test_metadata_dialog.cpp  test_process_id_generation.cpp  test_profile_manager.cpp.example  test_profile_validation.cpp  test_ui_integration.cpp  test_url_validation.cpp
tests/utils/: __init__.py  obs_helpers.py  platform_helpers.py
ui-prototype/: README.md  index.html
windows/: .actrc  setup-windows-act.ps1
(+56 files in other folders)
